# tap-google-play

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: autofix.yaml  autofix.yml  release.yaml  test.yaml  test.yml
tap_google_play/: streams.py  tap.py
tests/: test_core.py
