[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.30.1",
]

[project]
name = "tap-google-play"
description = "Singer tap for GooglePlay, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "GooglePlay",
  "Meltano",
  "singer.io",
]
license = "Apache-2.0"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [ "version" ]
dependencies = [
  "google-play-scraper==1.2.7",
  "singer-sdk~=0.55.0a1",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.authors]]
name = "hotglue"
email = "hello@hotglue.xyz"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-google-play = "tap_google_play.tap:TapGooglePlay.cli"

[dependency-groups]
dev = [
  "mypy>=1.11.1",
  "prek>=0.2.3",
  "pytest>=9",
  "pytest-github-actions-annotate-failures>=0.2",
  "singer-sdk[testing]",
  "ty>=0.0.8",
]

[tool.hatch]
[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.10"
preview = true

[tool.ruff]
line-length = 88
src = [
  "tap_google_play",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "DJ",     # flake8-django
  "FIX002", # line-contains-todo
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
flake8-annotations.allow-star-arg-any = true
pydocstyle.convention = "google"

[tool.pyproject-fmt]
table_format = "long"

[tool.mypy]
follow_untyped_imports = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_unused_configs = true
[[tool.mypy.overrides]]
module = [
  "google_play_scraper.*", # https://github.com/JoMingyu/google-play-scraper/issues/223
]
ignore_missing_imports = true

[tool.pytest]
addopts = [
  "-v",
  "-ra",
]
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [ "tests" ]
